--- a/app/HackathonMaster/HackathonMaster/Base.lproj/Main.storyboard
+++ b/app/HackathonMaster/HackathonMaster/Base.lproj/Main.storyboard
@@ -4,7 +4,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
     </dependencies>
     <scenes>
-        <!--Machine View Controller-->
+        <!--Machines-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
                 <viewController storyboardIdentifier="machine" id="9pv-A4-QxB" customClass="MachineViewController" sceneMemberID="viewController">
@@ -34,7 +34,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="vtW-sC-vyk"/>
+                    <navigationItem key="navigationItem" title="Machines" id="vtW-sC-vyk"/>
                     <connections>
                         <outlet property="tableView" destination="slK-mc-pQ4" id="nOf-Uy-pqT"/>
                     </connections>
@@ -43,7 +43,7 @@
             </objects>
             <point key="canvasLocation" x="932" y="-303"/>
         </scene>
-        <!--Mapa View Controller-->
+        <!--Locate Machines-->
         <scene sceneID="wg7-f3-ORb">
             <objects>
                 <viewController id="8rJ-Kc-sve" customClass="MapaViewController" sceneMemberID="viewController">
@@ -52,13 +52,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="Rjd-Ny-xeI"/>
+                    <navigationItem key="navigationItem" title="Locate Machines" id="Rjd-Ny-xeI"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="932" y="340"/>
         </scene>
-        <!--Historico View Controller-->
+        <!--History-->
         <scene sceneID="5Me-pL-gyX">
             <objects>
                 <viewController id="nDv-4W-lL7" customClass="HistoricoViewController" sceneMemberID="viewController">
@@ -67,7 +67,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="80" sectionHeaderHeight="22" sectionFooterHeight="22" id="GbP-gq-LN1">
-                                <rect key="frame" x="0.0" y="24" width="320" height="495"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="452"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -88,7 +88,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="zNQ-uk-Y0W"/>
+                    <navigationItem key="navigationItem" title="History" id="zNQ-uk-Y0W"/>
                     <connections>
                         <outlet property="tableView" destination="GbP-gq-LN1" id="w73-g0-SMU"/>
                     </connections>
@@ -105,37 +105,51 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Q1A-HV-S4k">
-                                <rect key="frame" x="137" y="233" width="46" height="30"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loginbg" id="svC-zS-wtj">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Login">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="didClickLogin:" destination="0yP-hc-Y1S" eventType="touchUpInside" id="mlF-Ph-C7O"/>
-                                </connections>
-                            </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="auj-EG-b5d">
-                                <rect key="frame" x="25" y="114" width="271" height="30"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loginlogo" id="xyl-k5-SEP">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login_gambs_2x" id="MLE-yH-Q4t">
+                                <rect key="frame" x="31" y="383" width="258" height="108"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" minimumFontSize="17" id="auj-EG-b5d">
+                                <rect key="frame" x="42" y="418" width="247" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="textColor" red="0.3294117647" green="0.60392156860000001" blue="0.58823529409999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="cYc-Ui-sI5">
-                                <rect key="frame" x="25" y="173" width="271" height="30"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Username" minimumFontSize="17" id="cYc-Ui-sI5">
+                                <rect key="frame" x="42" y="383" width="247" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" red="0.3294117647" green="0.60392156860000001" blue="0.58823529409999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" name="Helvetica-Bold" family="Helvetica" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="iAj-7y-2lA">
-                                <rect key="frame" x="105" y="282" width="111" height="30"/>
+                                <rect key="frame" x="162" y="453" width="127" height="38"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Cadastro">
+                                <state key="normal">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="didClickSignIn:" destination="0yP-hc-Y1S" eventType="touchUpInside" id="nBf-gX-jMS"/>
                                     <segue destination="tou-6j-gHe" kind="modal" id="gFE-KQ-kzJ"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Q1A-HV-S4k">
+                                <rect key="frame" x="31" y="453" width="128" height="38"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="didClickLogin:" destination="0yP-hc-Y1S" eventType="touchUpInside" id="mlF-Ph-C7O"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -181,11 +195,12 @@
             <objects>
                 <tabBarController storyboardIdentifier="principal" id="49e-Tb-3d3" sceneMemberID="viewController">
                     <nil key="simulatedBottomBarMetrics"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="W28-zg-YXA">
+                    <tabBar key="tabBar" contentMode="scaleAspectFit" itemPositioning="centered" id="W28-zg-YXA">
                         <rect key="frame" x="0.0" y="975" width="768" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                        <color key="barTintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="barTintColor" red="0.043137254899999998" green="0.047058823530000002" blue="0.062745098040000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="selectedImageTintColor" red="0.3294117647" green="0.60392156860000001" blue="0.58823529409999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
                         <segue destination="1zO-Z1-5vm" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
@@ -197,18 +212,20 @@
             </objects>
             <point key="canvasLocation" x="0.0" y="0.0"/>
         </scene>
-        <!--Item-->
+        <!--Navigation Controller-->
         <scene sceneID="kcz-dv-EbS">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ae1-hS-gxT" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="usO-Nm-Obl"/>
+                    <tabBarItem key="tabBarItem" title="" image="history50x50" id="usO-Nm-Obl">
+                        <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="0.0"/>
+                    </tabBarItem>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="bug-xO-Wwt">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <textAttributes key="titleTextAttributes">
-                            <color key="textColor" red="0.0" green="0.68688841540000001" blue="0.1765807566" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="textColor" red="0.3294117647" green="0.60392156860000001" blue="0.58823529409999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -220,18 +237,18 @@
             </objects>
             <point key="canvasLocation" x="400" y="1059"/>
         </scene>
-        <!--Second-->
+        <!--Navigation Controller-->
         <scene sceneID="QyP-hG-baF">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="wW5-6B-vnm" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Second" image="second" id="cPa-gy-q4n"/>
+                    <tabBarItem key="tabBarItem" title="" image="map50x50" id="cPa-gy-q4n"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="mU8-7s-YDs">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <textAttributes key="titleTextAttributes">
-                            <color key="textColor" red="0.0" green="0.68688841540000001" blue="0.1765807566" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="textColor" red="0.3294117647" green="0.60392156860000001" blue="0.58823529409999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -247,14 +264,16 @@
         <scene sceneID="dea-4k-ASS">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1zO-Z1-5vm" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" image="listicon_normal" selectedImage="listicon_active" id="acW-dT-cKf"/>
+                    <tabBarItem key="tabBarItem" title="" image="list50x50" id="acW-dT-cKf">
+                        <offsetWrapper key="titlePositionAdjustment" horizontal="0.0" vertical="0.0"/>
+                    </tabBarItem>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Qa6-26-ut2">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <textAttributes key="titleTextAttributes">
-                            <color key="textColor" red="0.0" green="0.68688841540000001" blue="0.1765807566" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="textColor" red="0.3294117647" green="0.60392156860000001" blue="0.58823529409999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -268,13 +287,17 @@
         </scene>
     </scenes>
     <resources>
-        <image name="listicon_active" width="40" height="40"/>
-        <image name="listicon_normal" width="40" height="40"/>
-        <image name="second" width="30" height="30"/>
+        <image name="history50x50" width="25" height="25"/>
+        <image name="list50x50" width="25" height="25"/>
+        <image name="login_gambs_2x" width="796" height="332"/>
+        <image name="loginbg" width="480" height="852"/>
+        <image name="loginlogo" width="480" height="852"/>
+        <image name="map50x50" width="25" height="25"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
+    <color key="tintColor" red="0.3294117647" green="0.60392156860000001" blue="0.58823529409999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
 </document>
