--- a/app/HackathonMaster/HackathonMaster/CustomCells/HistoricoCell.xib
+++ b/app/HackathonMaster/HackathonMaster/CustomCells/HistoricoCell.xib
@@ -19,7 +19,7 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title Label here" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nqs-Ck-EW7">
                         <rect key="frame" x="85" y="11" width="122" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.3294117647" green="0.60392156860000001" blue="0.58823529409999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Street Label here" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IDn-gJ-rND">
@@ -42,7 +42,7 @@
                 <outlet property="quantidade" destination="3o4-9e-2yT" id="e7V-xc-4VH"/>
                 <outlet property="titulo" destination="Nqs-Ck-EW7" id="61K-MP-7Ap"/>
             </connections>
-            <point key="canvasLocation" x="475" y="173"/>
+            <point key="canvasLocation" x="397" y="173"/>
         </tableViewCell>
     </objects>
     <resources>
