--- a/app/HackathonMaster/HackathonMaster/CustomCells/MachineCell.xib
+++ b/app/HackathonMaster/HackathonMaster/CustomCells/MachineCell.xib
@@ -6,34 +6,38 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MachineCell" rowHeight="230" id="KGk-i7-Jjw" customClass="MachineCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="142"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MachineCell" rowHeight="141" id="KGk-i7-Jjw" customClass="MachineCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="140"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="listitem" translatesAutoresizingMaskIntoConstraints="NO" id="SIK-0W-GyV">
-                        <rect key="frame" x="-12" y="-29" width="346" height="197"/>
+                        <rect key="frame" x="0.0" y="-1" width="320" height="140"/>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HRI-uS-wVY">
+                        <rect key="frame" x="36" y="94" width="279" height="25"/>
+                        <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="15"/>
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Coca - Cola" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="guZ-sx-LiG">
-                        <rect key="frame" x="8" y="65" width="312" height="34"/>
+                        <rect key="frame" x="36" y="65" width="403" height="34"/>
                         <fontDescription key="fontDescription" name="Helvetica-Light" family="Helvetica" pointSize="17"/>
                         <color key="textColor" red="0.32941176470588235" green="0.60392156862745094" blue="0.58823529411764708" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HRI-uS-wVY">
-                        <rect key="frame" x="9" y="98" width="304" height="25"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                 </subviews>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="470" y="355"/>
+            <connections>
+                <outlet property="subtitulo" destination="HRI-uS-wVY" id="CU7-Lt-OgI"/>
+                <outlet property="titulo" destination="guZ-sx-LiG" id="6mJ-1l-RLh"/>
+            </connections>
+            <point key="canvasLocation" x="252" y="353"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="listitem" width="958" height="374"/>
+        <image name="listitem" width="479" height="167"/>
     </resources>
 </document>
