--- a/app/HackathonMaster/HackathonMaster/Base.lproj/LaunchScreen.xib
+++ b/app/HackathonMaster/HackathonMaster/Base.lproj/LaunchScreen.xib
@@ -10,8 +10,8 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Splashscreen" translatesAutoresizingMaskIntoConstraints="NO" id="34u-y5-vEB">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="584"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="launchscreen" translatesAutoresizingMaskIntoConstraints="NO" id="WcO-wP-C6C">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                 </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -21,6 +21,6 @@
         </view>
     </objects>
     <resources>
-        <image name="Splashscreen" width="480" height="852"/>
+        <image name="launchscreen" width="480" height="852"/>
     </resources>
 </document>
